split BigFile out of drm.py

--- a/nb/Filelists.ipynb
+++ b/nb/Filelists.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import sys\n",
     "sys.path.append(\"../tools\")\n",
-    "import drm"
+    "import bigfile"
    ]
   },
   {
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "bigfile = drm.BigFile(\"../bigfiles/BIGFILE.000\")"
+    "big = bigfile.BigFile(\"../bigfiles/BIGFILE.000\")"
    ]
   },
   {
@@ -72,8 +72,8 @@
    ],
    "source": [
     "print(len(names))\n",
-    "crchashes = set(bigfile.entries.keys())\n",
-    "knownhashes = {drm.crc32r(name.encode(\"utf-8\")) for name in names}\n",
+    "crchashes = set(big.entries.keys())\n",
+    "knownhashes = {bigfile.crc32r(name.encode(\"utf-8\")) for name in names}\n",
     "print(\"{}/{}\".format(len(crchashes & knownhashes), len(crchashes)))"
    ]
   },
@@ -86,13 +86,13 @@
    "source": [
     "missing = []\n",
     "\n",
-    "for crc, payloads in bigfile.entries.items():\n",
+    "for crc, payloads in big.entries.items():\n",
     "    if crc in knownhashes: continue\n",
     "\n",
     "    # assume they all have the same type\n",
     "    # so looking at the first is sufficient\n",
     "    offset, size, lang = payloads[0]\n",
-    "    blob = bigfile.get_slice(offset, size)\n",
+    "    blob = big.get_slice(offset, size)\n",
     "    missing.append((crc, blob))"
    ]
   },
@@ -412,36 +412,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pc-w\\base_automatic_animated_door.drm\n",
-      "pc-w\\base_alarm_dispatcher.drm\n",
-      "pc-w\\firstobjects.drm\n",
-      "pc-w\\base_tv_screen.drm\n",
-      "pc-w\\base_swinging_dbl_door.drm\n",
-      "pc-w\\base_turret.drm\n",
-      "pc-w\\base_security_door.drm\n",
-      "pc-w\\base_searchable.drm\n",
-      "pc-w\\base_computer_shopping.drm\n",
-      "pc-w\\base_faridah_chopper.drm\n",
-      "pc-w\\base_computer.drm\n",
-      "pc-w\\base_searchable_animated.drm\n",
-      "pc-w\\base_breakable_window.drm\n",
-      "pc-w\\base_external_disc.drm\n",
-      "pc-w\\base_laserbeam.drm\n",
-      "pc-w\\base_playanim_ontrigger.drm\n",
       "pc-w\\base_alarm.drm\n",
+      "pc-w\\base_dedicated_terminal.drm\n",
+      "pc-w\\base_breakable_window.drm\n",
+      "pc-w\\firstobjects.drm\n",
+      "pc-w\\base_alarm_dispatcher.drm\n",
+      "pc-w\\base_tv_screen.drm\n",
+      "pc-w\\base_call_elevator.drm\n",
+      "pc-w\\base_searchable.drm\n",
+      "pc-w\\base_keypad.drm\n",
+      "pc-w\\base_computer.drm\n",
+      "pc-w\\base_external_disc.drm\n",
+      "pc-w\\base_searchable_animated.drm\n",
+      "pc-w\\base_swinging_dbl_door.drm\n",
+      "pc-w\\base_punchtroughwall_spawndebris.drm\n",
+      "pc-w\\base_news_reader.drm\n",
+      "pc-w\\base_ireader.drm\n",
+      "pc-w\\base_faridah_chopper.drm\n",
+      "pc-w\\base_playanim_ontrigger.drm\n",
+      "pc-w\\base_laserbeam.drm\n",
       "pc-w\\base_alarm_panel.drm\n",
       "pc-w\\base_player_interact_door.drm\n",
-      "pc-w\\base_news_reader.drm\n",
-      "pc-w\\base_keypad.drm\n",
-      "pc-w\\base_punchtroughwall_spawndebris.drm\n",
-      "pc-w\\base_ireader.drm\n",
-      "pc-w\\base_dedicated_terminal.drm\n",
-      "pc-w\\base_generic_switch.drm\n",
-      "pc-w\\base_bee_chopper.drm\n",
-      "pc-w\\base_swinging_door.drm\n",
       "pc-w\\base_dstr_fireextinguisher.drm\n",
-      "pc-w\\base_call_elevator.drm\n",
-      "pc-w\\base_auto_horizontal_sliding_dbl_door.drm\n"
+      "pc-w\\base_bee_chopper.drm\n",
+      "pc-w\\base_auto_horizontal_sliding_dbl_door.drm\n",
+      "pc-w\\base_swinging_door.drm\n",
+      "pc-w\\base_generic_switch.drm\n",
+      "pc-w\\base_security_door.drm\n",
+      "pc-w\\base_automatic_animated_door.drm\n",
+      "pc-w\\base_computer_shopping.drm\n",
+      "pc-w\\base_turret.drm\n"
      ]
     }
    ],
@@ -456,7 +456,7 @@
     "        path = \"pc-w\" + piece + \".drm\"\n",
     "    else:\n",
     "        path = \"pc-w\\\\\" + piece + \".drm\"\n",
-    "    crc = drm.crc32r(path.encode(\"utf-8\"))\n",
+    "    crc = bigfile.crc32r(path.encode(\"utf-8\"))\n",
     "    if crc not in crchashes: # find those not in the BIGFILE\n",
     "        print(path)"
    ]
